--- a/acxi.1
+++ b/acxi.1
@@ -1,4 +1,4 @@
-.TH ACXI 1 "2021\-09\-19" acxi "acxi manual"
+.TH ACXI 1 "2021\-09\-20" acxi "acxi manual"
 .SH NAME
 acxi  \- Command line audio conversion tool
 .SH SYNOPSIS
@@ -26,7 +26,8 @@ Tagging: \fBacxi\fR [\fB\-\-aggregate\fR [file name|extension]]
 [\fB\-\-tag\fR {"TAG1%:tag value^^TAG2%:tag value"}] 
 .IP * 2
 Checksums: \fBacxi\fR [\fB\-\-analyze\fR] [\fB\-\-checksum\fR] 
-[\fB\-\-checksum\-delete\fR] [\fB\-\-checksum\-verify\fR] [\fB\-\-duplicates\fR]
+[\fB\-\-checksum\-delete\fR] [\fB\-\-checksum\-ffps\fR, \fB\-ffps\fR] 
+[\fB\-\-checksum\-verify\fR] [\fB\-\-duplicates\fR]
 [\fB\-\-no\-ffp\fR] [\fB\-\-no\-md5\fR]
 .IP * 2
 Output Controls: \fBacxi\fR [\fB\-v\fR {0-3}] [\fB\-\-quiet\fR] 
@@ -158,8 +159,9 @@ To write to a file, use something like this:
 The tee will allow the output to also scroll on screen while it runs, which is
 helpful in many cases. Otherwise just redirect output to file directly.
 
-\fB\-v 1\fR wraps per file data to key: value pair lines; \fB\-v 3\fR adds raw 
-non rounded seconds and file size in bytes to all size / time results.
+\fB\-v 2\fR wraps per file data to key: value pair lines, adds ffp signature; 
+\fB\-v 3\fR adds raw non rounded seconds and file size in bytes to all size / 
+time results.
 
 .TP
 .B \-\-append\fR, \fB\-a  {extensions}\fR
@@ -286,6 +288,18 @@ files, since they should in general reflect what the actual files you have are.
 
 Do not use together with other cleaning/syncing options. Can be used with 
 \fB\-A\fR.
+
+.TP
+.B \-\-checksum\-ffps\fR, \fB\-\-ffps\fR
+Prints checksums to screen, disables md5 generation and output. Useful for 
+generating large lists of ffps for a collection.
+
+Same as: \fBacxi \-K \-\-no\-md5 \-\-test\fB
+
+Sample (prints to screen, redirects stderr to stdout, prints to file):
+.nf
+\fBacxi \-s ./ \-\-ffps 2>&1 | tee ffps.txt\fB
+.fi
 
 .TP
 .B \-\-checksum\-verify\fR, \fB\-V\fR
