added in more to top synopsis, shortcut --dupes

--- a/acxi.1
+++ b/acxi.1
@@ -27,7 +27,7 @@ Tagging: \fBacxi\fR [\fB\-\-aggregate\fR [file name|extension]]
 .IP * 2
 Checksums: \fBacxi\fR [\fB\-\-analyze\fR] [\fB\-\-checksum\fR] 
 [\fB\-\-checksum\-delete\fR] [\fB\-\-checksum\-ffps\fR, \fB\-ffps\fR] 
-[\fB\-\-checksum\-verify\fR] [\fB\-\-duplicates\fR]
+[\fB\-\-checksum\-verify\fR] [\fB\-\-duplicates\fR, \fB\-\-dupes\fR]
 [\fB\-\-no\-ffp\fR] [\fB\-\-no\-md5\fR]
 .IP * 2
 Output Controls: \fBacxi\fR [\fB\-v\fR {0-3}] [\fB\-\-quiet\fR] 
