--- a/acxi.1
+++ b/acxi.1
@@ -20,13 +20,12 @@ Tagging: \fBacxi\fR [\fB\-\-aggregate\fR [file name|extension]]
 [\fB\-\-infofix\fR [d|n|q|t|u|w]] 
 [\fB\-\-info\-rating\fR {2\-xxx}
 [\fB\-\-prefill\fR] [\fB\-\-prefill\-file\fR {release info file name}] 
-[\fB\-\-no\-ffp\fR] [\fB\-\-no\-md5\fR] [\fB\-\-no\-replaygain\fR] 
-[\fB\-\-recurse\fR {-1-xx}] [\fB\-\-remove\-images\fR] 
-[\fB\-\-remove\-padding\fR] [\fB\-\-start\fR {0-xx}]
-[\fB\-\-tag\fR {"TAG1%:tag value^^TAG2%:tag value"}] 
+[\fB\-\-no\-replaygain\fR] [\fB\-\-recurse\fR {-1-xx}] 
+[\fB\-\-remove\-images\fR] [\fB\-\-remove\-padding\fR] 
+[\fB\-\-start\fR {0-xx}] [\fB\-\-tag\fR {"TAG1%:tag value^^TAG2%:tag value"}] 
 .IP * 2
 Checksums: \fBacxi\fR [\fB\-\-analyze\fR] [\fB\-\-checksum\fR] 
-[\fB\-\-checksum\-delete\fR] [\fB\-\-checksum\-ffps\fR, \fB\-ffps\fR] 
+[\fB\-\-checksum\-delete\fR] [\fB\-\-checksum\-ffps\fR, \fB\-\-ffps\fR] 
 [\fB\-\-checksum\-verify\fR] [\fB\-\-duplicates\fR, \fB\-\-dupes\fR]
 [\fB\-\-no\-ffp\fR] [\fB\-\-no\-md5\fR]
 .IP * 2
