--- a/acxi.1
+++ b/acxi.1
@@ -314,7 +314,7 @@ Do not use together with other cleaning/syncing options. Can be used with
 Prints checksums to screen, disables md5 generation and output. Useful for 
 generating large lists of ffps for a collection.
 
-Similar to: \fBacxi \-K \-\-no\-md5 \-\-test\fB
+Similar to: \fBacxi \-K \-\-no\-md5 \-\-test\fR
 
 Sample (prints to screen, redirects stderr to stdout, prints to file):
 .nf
