cleanup, edits of man

--- a/acxi.1
+++ b/acxi.1
@@ -370,8 +370,7 @@ Sample: \fB\-c txt,pdf,png,jpg,jpeg,gif\fR
 
 .TP
 .B \-\-debug\fR
-All output available, including debugger data for some events. Same as 
-\fB\-v 4\fR
+All output available, including debugger data for some events.
 
 .TP
 .B \-\-destination, \fB\-d {path}\fR
