more edits, sigh

--- a/acxi.1
+++ b/acxi.1
@@ -370,7 +370,8 @@ Sample: \fB\-c txt,pdf,png,jpg,jpeg,gif\fR
 
 .TP
 .B \-\-debug\fR
-All output available, including debugger data for some events.
+Activate specialized debugger output. Don't use unless you are asked to, or are 
+a developer or something like that.
 
 .TP
 .B \-\-destination, \fB\-d {path}\fR
