--- a/acxi.1
+++ b/acxi.1
@@ -1135,3 +1135,5 @@ Copyright (c) (flac2ogg.pl) 2004 \- Jason L. Buberel \- jason@buberel.org
 Copyright (c) (flac2ogg.pl) 2007 \- Evan Boggs \- etboggs@indiana.edu
 
 Thanks for trying acxi out, I hope it's useful to you.
+
+.\" EOF
