--- a/acxi.1
+++ b/acxi.1
@@ -1120,8 +1120,8 @@ or
 .I  https://github.com/smxi/acxi
 
 .SH  AUTHOR AND CONTRIBUTORS TO CODE
-
-\fBacxi\fR is a fork and full rewrite of \fBflac2ogg.pl\fR.
+.\" don't change this line until new acxi out for a while, used for -U test
+acxi is a fork and full rewrite of flac2ogg.pl.
 
 Copyright (c) Harald Hope, 2010\-2021
 
