--- a/acxi.1
+++ b/acxi.1
@@ -1127,8 +1127,8 @@ Copyright (c) Harald Hope, 2010\-2021
 
 Forking logic:  prupert. 2019-07
 
-MP3 tagging: Odd Eivind Ebbesen \- \fIwww.oddware.net\fR \- <oddebb at gmail dot 
-com>
+Initial MP3 tagging logic: Odd Eivind Ebbesen \- \fIwww.oddware.net\fR \- 
+<oddebb at gmail dot com>
 
 Copyright (c) (flac2ogg.pl) 2004 \- Jason L. Buberel \- jason@buberel.org
 
