--- a/acxi.1
+++ b/acxi.1
@@ -1125,7 +1125,7 @@ acxi is a fork and full rewrite of flac2ogg.pl.
 
 Copyright (c) Harald Hope, 2010\-2021
 
-Forking logic:  prupert. 2019-07
+Initial forking logic:  prupert. 2019-07
 
 Initial MP3 tagging logic: Odd Eivind Ebbesen \- \fIwww.oddware.net\fR \- 
 <oddebb at gmail dot com>
